<resources>
    <string name="app_name" translatable="false">BudgetManager</string>
    <string name="action_settings">Settings</string>
    <string name="action_balance">Adjust current balance</string>
    <string name="fab_add_expense">Add expense/income</string>
    <string name="fab_add_monthly_expense">Add monthly expense/income</string>
    <string name="title_activity_add_expense">Add expense</string>
    <string name="title_activity_add_income">Add income</string>
    <string name="title_activity_edit_expense">Edit expense</string>
    <string name="title_activity_edit_income">Edit income</string>
    <string name="title_activity_monthly_expense_add">Add monthly expense</string>
    <string name="title_activity_monthly_income_add">Add monthly income</string>
    <string name="title_activity_monthly_expense_edit">Edit monthly expense</string>
    <string name="title_activity_monthly_income_edit">Edit monthly income</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">BudgetManager</string>
    <string name="title_activity_premium">Premium</string>
    <string name="title_activity_monthly_report">Monthly report</string>
    <string name="cancel">Cancel</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="amount">Amount ( %s )</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="payment">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="first_occurence">First instance</string>
    <string name="no_expense_for_today">No income or expense yet.</string>
    <string name="no_description_error">Enter a description</string>
    <string name="no_amount_error">Enter an amount</string>
    <string name="negative_amount_error">Amount should be greater than 0</string>
    <string name="invalid_amount">Not a valid amount</string>
    <string name="dialog_edit_expense_title">What do you want to do?</string>
    <string name="dialog_edit_income_title">What do you want to do?</string>
    <string-array name="dialog_edit_expense_choices">
        <item>Edit expense</item>
        <item>Delete expense</item>
    </string-array>
    <string-array name="dialog_edit_income_choices">
        <item>Edit income</item>
        <item>Delete income</item>
    </string-array>
    <string name="dialog_edit_monthly_expense_title">Monthly expense: What do you want to do?</string>
    <string name="dialog_edit_monthly_income_title">Monthly income: What do you want to do?</string>
    <string-array name="dialog_edit_monthly_expense_choices">
        <item>Edit this instance</item>
        <item>Delete this instance only</item>
        <item>Delete all following</item>
        <item>Delete all before</item>
        <item>Delete all</item>
    </string-array>
    <string-array name="dialog_edit_monthly_income_choices">
        <item>Edit this instance</item>
        <item>Delete this instance only</item>
        <item>Delete all following</item>
        <item>Delete all before</item>
        <item>Delete all</item>
    </string-array>
    <string name="expense_delete_snackbar_text">Expense deleted</string>
    <string name="income_delete_snackbar_text">Income deleted</string>
    <string name="adjust_balance_title">Adjust current balance</string>
    <string name="adjust_balance_message">Adjust how much you currently have on your account</string>
    <string name="adjust_balance_expense_title">Balance</string>
    <string name="adjust_balance_snackbar_text">Balance adjusted to %s</string>
    <string name="account_balance_format">Balance on %s:</string>
    <string name="account_balance_date_format">MMM dd</string>
    <string name="add_expense_date_format">MMM dd yyyy</string>
    <string name="adjust_limit_warning_title">Change warning threshold for low balance</string>
    <string name="adjust_limit_warning_message">Set the threshold value (must be > 0)</string>
    <string name="adjust_limit_warning_error_title">Oops</string>
    <string name="adjust_limit_warning_error_message">The value you entered is invalid. It must be a positive number, superior to 0</string>
    <string name="adjust_balance_error_title">Oops</string>
    <string name="adjust_balance_error_message">The value you entered is invalid.</string>
    <string name="monthly">MONTHLY</string>
    <string name="monthly_expense_add_loading_title">Loading</string>
    <string name="monthly_expense_add_loading_message">Creating monthly expense…</string>
    <string name="monthly_income_add_loading_message">Creating monthly income…</string>
    <string name="monthly_expense_add_error_title">Oops</string>
    <string name="monthly_expense_add_error_message">An error occurred.</string>
    <string name="monthly_expense_delete_success_message">Monthly expense deleted with success</string>
    <string name="monthly_expense_delete_loading_title">Deleting</string>
    <string name="monthly_expense_delete_loading_message">Deleting monthly expense…</string>
    <string name="monthly_expense_delete_error_title">Oops</string>
    <string name="monthly_expense_delete_error_message">An error occurred.</string>
    <string name="monthly_expense_restoring_loading_title">Canceling</string>
    <string name="monthly_expense_restoring_loading_message">Restoring deleted monthly expense…</string>
    <string name="monthly_expense_restored_success_message">Monthly expense restored with success</string>
    <string name="monthly_expense_restore_error_title">Oops</string>
    <string name="monthly_expense_restore_error_message">An error occurred.</string>
    <string name="monthly_expense_delete_first_error_title">Oops</string>
    <string name="monthly_expense_delete_first_error_message">There are no instances before this one.</string>
    <string name="expense_delete_error_title">Oops</string>
    <string name="expense_delete_error_message">An error occurred.</string>
    <string name="setting_category_app_title">App</string>
    <string name="setting_category_rate_button_title">Like the app?</string>
    <string name="setting_category_rate_button_message">Let me know what you think</string>
    <string name="setting_category_bug_report_send_button_title">Report a bug</string>
    <string name="bug_report_email" translatable="false">BudgetManager@benoitletondor.com</string>
    <string name="setting_category_bug_report_send_subject" translatable="false">BudgetManager - Bug report</string>
    <string name="setting_category_bug_report_send_text">\n\n---\n*Please do not remove this part*\nBudgetManager id: %s</string>
    <string name="setting_category_bug_report_send_error">Unable to find an app to send bug report email</string>
    <string name="setting_category_general_title">General</string>
    <string name="setting_category_currency_change_button_title">Change currency (%s)</string>
    <string name="setting_category_currency_change_button_message">Select the currency you want to use</string>
    <string name="setting_category_currency_change_dialog_title">Select your currency</string>
    <string name="setting_category_limit_set_button_title">Set low balance warning threshold (%s)</string>
    <string name="setting_category_limit_set_button_message">Change the threshold at which you want to be warned about a low balance</string>
    <string name="setting_category_app_version_title" translatable="false">BudgetManager %s</string>
    <string name="setting_category_app_version_message">Made by @BenoitLetondor</string>
    <string name="setting_category_share_app_title">Tell your friends</string>
    <string name="setting_category_share_app_message">BudgetManager is free, so why not sharing it with your friends!</string>
    <string name="setting_category_dev_title" translatable="false">Dev</string>
    <string name="setting_category_show_welcome_screen_button_title" translatable="false">Show welcome screen</string>
    <string name="setting_category_disable_animation_title" translatable="false">Animations</string>
    <string name="setting_category_disable_animation_message" translatable="false">You can disable animations if you experience any bug or glitch</string>
    <string name="setting_category_show_premium" translatable="false">Show premium screen</string>
    <string name="setting_category_show_notif_daily_reminder" translatable="false">Show daily reminder opt-in notif</string>
    <string name="setting_category_show_notif_monthly_report_premium" translatable="false">Show monthly report notif (Premium)</string>
    <string name="setting_category_show_notif_monthly_report_notpremium" translatable="false">Show monthly report notif (Non premium)</string>
    <string name="setting_category_premium_title">Premium</string>
    <string name="setting_category_premium_status_title">You are premium!</string>
    <string name="setting_category_premium_status_message">You have access to premium features</string>
    <string name="setting_category_premium_redeem_title">Promo code</string>
    <string name="setting_category_premium_redeem_message">Redeem a promo code</string>
    <string name="setting_category_notifications_update_title">Updates</string>
    <string name="setting_category_notifications_update_message">Get notified of new features of the app. Won\'t spam you, I promise!</string>
    <string name="setting_category_notifications_daily_title">Daily reminder</string>
    <string name="setting_category_notifications_daily_message">Receive a notification at the end of the day if you didn\'t enter your expenses</string>
    <string name="setting_category_not_premium_status_title">Become a premium user</string>
    <string name="setting_category_not_premium_status_message">Access all the premium features</string>
    <string name="setting_category_notifications_monthly_title">Monthly report notification</string>
    <string name="setting_category_notifications_monthly_message">Receive a notification when a new monthly report is complete</string>
    <string name="premium_popup_premium_title">You are premium!</string>
    <string name="premium_popup_premium_message">You have access to premium features:\n\n- Monthly report: Get a sum-up of your expenses and incomes of the month\n- Daily reminder if you forgot to enter your expenses during the day\n… and more premium features that will be added soon!</string>
    <string name="premium_popup_not_premium_title">Become a premium user</string>
    <string name="premium_popup_not_premium_message">Access all the premium features!</string>
    <string name="premium_popup_not_premium_feature1_title">2. Daily reminder</string>
    <string name="premium_popup_not_premium_feature1_message">Receive a notification at the end of the day if you didn\'t enter your expenses.</string>
    <string name="premium_popup_not_premium_feature2_title">1. Monthly report</string>
    <string name="premium_popup_not_premium_feature2_message">Get a sum-up of your expenses and incomes of the month and see how much you saved.</string>
    <string name="premium_popup_not_premium_feature_more_title">… and more premium features that will be added soon!</string>
    <string name="premium_popup_not_premium_cta">Purchase</string>
    <string name="premium_popup_become_title">Become a premium user</string>
    <string name="onboarding_screen_4_title">All set!</string>
    <string name="onboarding_screen_4_message">(That was easy, huh?)</string>
    <string name="onboarding_screen_4_message2">What do you have to do next?</string>
    <string name="onboarding_screen_4_message3">1. Add monthly recurring expenses and incomes (salary, rent, bills…)\n2. Don\'t forget to add your daily expenses and incomes during the day</string>
    <string name="onboarding_screen_4_message4">Thank you for using BudgetManager, and welcome :)</string>
    <string name="onboarding_screen_4_cta">Let\'s go!</string>
</resources>